--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,12 @@
 
 # But not these files...
 !.gitignore
-!script.pl
-!template.latex
+
 # etc...
 
 # ...even if they are in subdirectories
 !*/
 
 # if the files to be tracked are in subdirectories
-!*/a/b/file1.txt
+!quake-leveldesign-starterkit-master/id1/maps/testLevelGym.map
 !*/a/b/c/*
