--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@
 
 # if the files to be tracked are in subdirectories
 !quake-leveldesign-starterkit-master/id1/maps/testLevelGym.map
-!*/a/b/c/*
+!quake-leveldesign-starterkit-master/id1/maps/churchOfMan.map
